# diafan

./: .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/diafan/: __init__.py  cli.py
tests/: test_paginated_download.py
